--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,21 +4,90 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        p{background-color: blue;
-            font-color:white;
-            padding:10px}
-    </style>
-    <title>Document</title>
+
+{background-color: aqua;}
+<!-- {text-align: center} -->
+</style>
+
+
+<body>
+
+
+
+</body>
+<title>Learn to code in Tampa| DigitalCrafts</title>
 </head>
 <body>
-    
-</body>
-</html>
+<center><h1>Welcome to Digitalcrafts!</h1>
+ <img src="C:\Users\Micha\OneDrive\DigitalCrafts2020\Frontend\Images\smilingcomputer.jpg" alt =computer clipart width= "100" height= "60" align="bottom" </center>
+    <div>
 <div>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ea nesciunt consequatur nemo autem quo? Iure pariatur ipsam in numquam dolorem odio et velit fugit, a, quam ad neque nemo?
+<div>
+<br>
+<br>
+</div>
+</div>
+<center><h2> <b>Learn to Code in Weeks, Not Years!!</b></h2> </center>
+
+
+
+<p>  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio nostrum magni architecto ducimus, quia dolor fugit! Corporis, alias officiis eaque aut blanditiis, delectus quo officia nobis ullam vitae, eius doloremqueLorem, ipsum dolor sit amet consectetur adipisicing elit. Optio nostrum magni architecto ducimus, quia dolor fugit! Corporis, alias officiis eaque aut blanditiis, delectus quo officia nobis ullam vitae, eius doloremqueLorem, ipsum dolor sit amet consectetur adipisicing elit. Optio nostrum magni architecto ducimus, quia dolor fugit! Corporis, alias officiis eaque aut blanditiis, delectus quo officia nobis ullam vitae, eius doloremque</p>
+
+<hr>
+<div>
+<div>
+<div>
+
+</div>
+</div>
+<p><center><h3>Check out our state of art classrooms</h3></center>
+<center><img src="C:\Users\Micha\OneDrive\DigitalCrafts2020\Frontend\Images\class2.jpg" alt="computer lab"></center>
+</p>
+<br>
+<p> <center><h3><b>Ready to reprogram your career?</b></h3></center>
+
+<center><h4>Next Classes Start:</h4> 
+
+<center><b>12/7/20  |  1/11/21  |  1/19/21</b></center>
+
+  
+<br>
+
+</p></div>
+
+
+</body>
+
+<div>
+
 
 
 </div>
     <div>
-        <p>Hi I'm white font</p>
+        <p></p>
     </div>
+
+
+    <footer>
+     <center>   <form method=post action="/cgi-bin/guestBook.pl">
+            <input type=hidden name=fields value="Name,Email,Web Address,Comments">
+            Name: <input type=text name=Name size=50><br>
+            Email Address: <input type=text name=Email size=50><br>
+            Web Address: <input type=text name="Web Address" size=50><br>
+            Comments: <br><textarea name=Comments rows=5 cols=60>
+            </textarea><br>
+            <input type=submit value="Submit">
+            </form>
+            <hr noshade></center>
+
+            <!--GUESTBOOK-OPTIONS: maxEntries=10,addBottom-->
+            <!--GUESTBOOK-->
+            <!--GUESTBOOK-->
+
+<center>   <hr noshade>
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+    <img src="https://hitwebcounter.com/counter/counter.php?page=7716260&style=0025&nbdigits=5&type=page&initCount=1995" title="Total Website Hits" Alt="Web Hits"   border="0" /></a> 
+</center>
+</footer>
+</html>
