--- a/index.html
+++ b/index.html
@@ -1,83 +1,139 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
 
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="C:\Users\Micha\OneDrive\DigitalCrafts2020\Frontend\CSS\style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-</head>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-<body>
-<title>Learn to code in Tampa| DigitalCrafts</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/header.css">
+  </head>
 
-
-<h1>Welcome to Digitalcrafts!</h1>
-<div>
-<img src="C:\Users\Micha\OneDrive\DigitalCrafts2020\Frontend\Images\smilingcomputer.jpg" alt =computer clipart width= "100" height= "60" align="bottom" > 
-</div>
-
-<br>
-<br>
-</div>
-
-<h2> <b>Learn to Code in Weeks, Not Years!!</b></h2> 
+  <body>
 
 
+    <div class="container-fluid p-0">
 
-<p>  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio nostrum magni architecto ducimus, quia dolor fugit! Corporis, alias officiis eaque aut blanditiis, delectus quo officia nobis ullam vitae, eius doloremqueLorem, ipsum dolor sit amet
-consectetur adipisicing elit. Optio nostrum magni architecto ducimus, quia dolor fugit! Corporis, alias officiis eaque aut blanditiis, delectus quo officia nobis ullam vitae, eius doloremqueLorem, ipsum dolor sit amet consectetur adipisicing elit. Optio nostrum magni architecto ducimus, quia dolor fugit! Corporis, alias officiis eaque aut blanditiis, delectus quo officia nobis ullam vitae, eius doloremque</p>
+      <div class="header position-relative top">
 
-</div>
-<hr>
+        <div
+          class="position-absolute top h-100 w-100 cp-text-white z20 d-flex flex-column justify-content-center align-items-center">
+          <!--text-->
+          <div class="display-2 cp-text-accent d-none d-md-block">Huhyn Restaurant</div>
+          <div class="h3 cp-text-accent d-md-none d-lg-none d-xl-none">Huhyn Restaurant</div>
 
+          <div class="h3 cp-text-what">Vietnamese Restaurant</div>
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-warning d-none d-md-block" data-toggle="modal"
+            data-target="#exampleModal">
+            Join our newsletter
+          </button>
 
-</div>
-</div>
-<p><h3>Check out our state of art classrooms</h3>
-<img src="C:\Users\Micha\OneDrive\DigitalCrafts2020\Frontend\Images\class2.jpg" alt="computer lab">
-</p>
-<br>
-<hr>
-<h3>What are previous Cohorts have to say</h3>
-<div>
-<br>
-<br>
-<p>
-<img src =C:\Users\Micha\OneDrive\DigitalCrafts2020\Frontend\Images\headshot1.jpg height="150px" >
+        </div>
 
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>Minus id qui placeat sed consequatur perferendis minima <br>officiis vero quos, doloremque explicabo consectetur officia <br>assumenda ex delectus neque provident atque soluta.</<p>
-<center>
-<img src 
-=C:\Users\Micha\OneDrive\DigitalCrafts2020\Frontend\Images\headshot2.jpg height="150px" align:top ></center>
-<br>
-<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-<br> Hic facilis illum omnis maiores debitis voluptatibus <br>necessitatibus cupiditate quia cumque, quasi sapiente <br>consectetur natus quos, est doloremque inventore illo <br>temporibus ipsum?</p>
-<img src =C:\Users\Micha\OneDrive\DigitalCrafts2020\Frontend\Images\student1.jpg height="150px" align:top >
-<br>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing <br>elit. Nihil, rem sequi laboriosam sint ipsam omnis nam quos <br>maxime odio a veniam saepe molestiae velit accusantium et quas nesciunt eos architecto?
-</p>
-
-<h4><b>Ready to reprogram your career?</b> 
-<br></h4>Next Classes Start:</h4>12/7/94  |  1/11/95  |  1/19/95</h4>
-
-<br>
-
-    <footer> <form method=post action="/cgi-bin/guestBook.pl">
-            <input type=hidden name=fields value="Name,Email,Web Address,Comments">
-            Name: <input type=text name=Name size=50><br>
-            Email Address: <input type=text name=Email size=50><br>
-            Web Address: <input type=text name="Web Address" size=50><br>
-            Comments: <br><textarea name=Comments rows=5 cols=60>
-            </textarea><br>
-            <input type=submit value="Submit">
-            </form>
-            <hr nosha
-            <!--GUESTBOOK-OPTIONS: maxEntries=10,addBottom-->
+        <!-- <div class="position-absolute z15 top cp-bg-black w-100 h-100 opactiy"> -->
+        <!--opacity layer-->
+      </div>
 
 
-    <img src="https://hitwebcounter.com/counter/counter.php?page=7716260&style=0025&nbdigits=5&type=page&initCount=1990" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>
+      <div class="d-none d-md-block position-absolute top z10 embed-responsive embed-responsive-16by9">
+        <!--video-->
+        <iframe width="100%" src="https://www.youtube.com/embed/hz70ucYZyy4?autoplay=1&loop=2&mute=1&enablejsapi=1"
+          frameborder="0" allow="accelerometer; autoplay; loop; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen></iframe>
+      </div>
+
+      <div class="d-md-none d-lg-none d-xl-none position-absolute top z10 h-100 w-100">
+
+        <img src="images/noodles.jpg" alt="">
+      </div>
+
+    </div>
+    </div>
+    </div>
+
+    </div>
+    <!--end of header container-->
+    <nav class="navbar navbar-expand-lg cp-text-accent cp-bg-black sticky-top height:20px;"></nav>
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+      </ul>
+    </div>
+    </nav>
+    <div></div>
+
+
+    <main>
+      <div class="dark"></div>
+      <div class="light"></div>
+      <div class="dark"></div>
+      <div class="light"></div>
+      <div class="dark"></div>
+      <div class="light"></div>
+
+    </main>
+
+    <footer>
+
     </footer>
-</html>
+    </div>
+    <!--end of container-fluid-->
+
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Join our Huhyn Newsletter</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            Information out our fooda
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-warning">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
+  </body>
+
+</html
